--- a/06/exercicio01/assets/css/style.css
+++ b/06/exercicio01/assets/css/style.css
@@ -1,3 +1,10 @@
+:root {
+    --cor-fundo: #34495e;
+    --cor-botao: #EF476F;
+    --cor-texto: #fff;
+    --tamanho-texto: 1.3rem;
+    --tamanho-texto-botao: 1.5rem;
+}
 * {
     margin: 0;
     padding: 0;
@@ -6,31 +13,88 @@
 
 body {
     width: 100vw;
-    background-color: #34495e;
+    background-color: var(--cor-fundo);
     
 }
 .principal {
     height: 650px;
     width: 60vw;
-    margin: 130px auto;
+    margin: 40px auto;
 }
 
-.principal h1, h2 {
+h1, h2 {
     text-align: center;
     margin: 20px 0;
-    color: #fff;
-    font-weight: 700;
+    color: var(--cor-texto);
+   
 }
 
+h1 a {
+    color: var(--cor-texto);
+    font-weight: 700;
+    font-size: 3rem;
+    text-decoration: none;
+}
+
+h2 {
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+p {
+    margin: 30px 0;
+    color: var(--cor-texto);
+    font-size: var(--tamanho-texto);
+}
+
+figure {
+    text-align: center;
+}
+
+img {
+    width: 150px;
+}
 
 .secao__opcao__botao a {
     display: inline-block;
-    margin: 15px;
-    padding: 35px;
+    margin: 10px;
+    padding: 25px;
     width: 95%;
     text-align: center;
     text-decoration: none;
-    font-size: 1.5rem;
-    color: #fff;
-    background-color: #EF476F;
+    font-size: var(--tamanho-texto-botao);
+    color: var(--cor-texto);
+    background-color: var(--cor-botao);
+}
+
+.secao__formulario label {
+    display: inline-block;
+    color: var(--cor-texto);
+    font-size: var(--tamanho-texto);
+    font-weight: 700;
+    margin: 10px 0;
+}
+
+.secao__formulario {
+    margin-top: 30px;
+}
+.secao__formulario input {
+    display: inline-block;
+    width: 100%;
+    padding: 15px;
+    border: none;
+    font-size: var(--tamanho-texto);
+    border: 1px solid var(--cor-botao);
+    margin-bottom: 25px;
+}
+
+.secao__formulario input[type=submit] {
+    color: var(--cor-texto);
+    font-size: var(--tamanho-texto-botao);
+    font-weight: 700;
+    background-color: var(--cor-botao);
+    border: none;
+    border-radius: 5px;
+    height: 80px;
+    margin-bottom: 50px;
 }
